corrected text vs image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -117,12 +117,27 @@ textarea {
      display: block;
    }
 
+   h2, h3 {
+     text-align: center;
+     font-weight: lighter;
+   }
    h1 {
-     color: #305535;
      font-size: 5em;
      font-weight: lighter;
    }
 
+   h2 {
+     font-size: 1.1em;
+   }
+
+   h3 {
+     font-size: 3.5em;
+   }
+   h4 {
+     font-size: 15em;
+     font-weight: normal;
+     letter-spacing: .1em;
+   }
 
    .main-nav ul, .footer-nav ul, .social-nav ul {
        list-style-type: none;
@@ -141,7 +156,7 @@ textarea {
 
    .footer-nav ul {
      top: 90%;
-     left: 0%;
+     left: 1.5%;
      background-color: #fff;
      padding-bottom: 2em;
    }
@@ -185,7 +200,6 @@ textarea {
      padding: 2em 1em 0 0;
    }
 
-   /* Change the link color to #111 (black) on hover */
    .main-nav li a:hover {
        border-bottom: 6px solid #305535;
    }
@@ -228,16 +242,28 @@ textarea {
      margin: -2em 0 0 0;
      padding-bottom: 3em;
      border: 1px solid white;
+     overflow: hidden;
    }
 
-   .section2, .section3, .section4, .section5 {
-     border: 1px solid white;
-   }
+   .section2 img, .section2-text {
+        vertical-align: middle;
+        display: inline-block;
+      }
 
-  .section1 img {
-    height: 100%;
-    width: 100%;
-  }
+    .section3 img, .section3-text {
+      vertical-align: middle;
+      display: inline-block;
+      }
+
+    .section4 img, .section4-text {
+      vertical-align: middle;
+      display: inline-block;
+      }
+
+    .section4-text {
+      vertical-align: middle;
+    }
+
 
    .section1 img, .section3 img, .section4 img {
      z-index: 2;
@@ -247,8 +273,12 @@ textarea {
    .section2 img, .section5 img {
      z-index: 0;
      position: relative;
-
    }
+   .section3 img, .section4 img {
+     width: 60%;
+   }
+
+
    .section1 {
      background-color: hsla(151, 35%, 95%, 0.60);
    }
@@ -266,7 +296,17 @@ textarea {
    }
    .section5 {
     background-color: hsla(151, 35%, 95%, 0.60);
+    padding-bottom: 2em;
    }
+
+
+
+    .contact {
+      position: fixed;
+      top: 92%;
+      right: 6%;
+      z-index: 4;
+    }
 
 
 
